# Compile-Tensorflow-C--without-Bazel

./: README.md
TensorFlow_cpp_Cmake/: CMakeLists.txt  README.md  recompile.sh
TensorFlow_cpp_Cmake/include/: CTFDetector.h  CXXTFDetector.h  Common.h  Detection.h
TensorFlow_cpp_Cmake/src/: CMakeLists.txt  CTFDetector.cpp  CXXTFDetector.cpp  Common.cpp  Detection.cpp
TensorFlow_cpp_Cmake/tests/: CMakeLists.txt  testC.cpp  testCXX.cpp
tensorflow_classify_cpp/: .cproject  .project
tensorflow_classify_cpp/Debug/: makefile  tensorflow_classify_cpp
tensorflow_classify_cpp/Debug/src/: classify.d  subdir.mk  tensorflow_classify_cpp.d
tensorflow_classify_cpp/src/: Makefile  classify.cpp  classify.h  classify.py  tensorflow_classify_cpp.cpp
tensorflow_cpp/: CMakeLists.txt
tensorflow_cpp/data/: download.sh
tensorflow_cpp/include/: copy_header.sh
tensorflow_cpp/lib/: copy_lib.sh
tensorflow_cpp/src/: Makefile  helloTF.c  main
tensorflow_detection_cpp/: .cproject  .project
tensorflow_detection_cpp/Debug/: makefile  objects.mk  tensorflow_detection_cpp
tensorflow_detection_cpp/Debug/src/: object_detection.d  subdir.mk  tensorflow_detection_cpp.d
tensorflow_detection_cpp/src/: configure  object_detection.cpp  object_detection.h  tensorflow_detection_cpp.cpp
